--- a/src/ReviewAnswersPopup.css
+++ b/src/ReviewAnswersPopup.css
@@ -20,14 +20,11 @@
 /* Popup box */
 .popup_box_review {
   background-color: rgb(22, 22, 22);
-  border-width: 1px;
-  border-color: #ffffff20;
-  border-radius: 22px;
+  border-radius: 20px;
   padding: 20px;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-  width: 64%;
-  height: 93.5%;
-  margin-left: 33%;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   position: fixed;
